--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -8,7 +8,7 @@
   font-weight: 300;
   line-height: normal;
   letter-spacing: 0.8px;
-  color: #92A1A9;
+  color: #92a1a9;
 
   &__links {
     width: 465px;
