--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -5,9 +5,9 @@
 
 .btn-light {
   border-radius: 2px;
-  border: 1px solid rgba(223, 223, 223, 0.80);
+  border: 1px solid rgba(223, 223, 223, 0.8);
   background: rgba(216, 216, 216, 0.35);
-  box-shadow: 3px 6px 15px -1px rgba(0, 0, 0, 0.10);
+  box-shadow: 3px 6px 15px -1px rgba(0, 0, 0, 0.1);
   cursor: pointer;
   padding: 20px 40px;
   color: #284657;
@@ -71,7 +71,7 @@
 
 .input {
   border-radius: 4px;
-  border: 1px solid #C0C0C0;
+  border: 1px solid #c0c0c0;
   background: transparent;
   padding: 20px;
   font-family: 'SF Pro Display', sans-serif;
