--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -6,6 +6,14 @@
   margin-bottom: 42px;
 }
 
+.subtitle {
+  font-size: 40px;
+  font-weight: 600;
+  line-height: 70%;
+  letter-spacing: 0.8px;
+  margin-bottom: 42px;
+}
+
 .text {
   font-family: 'Inter', sans-serif;
   font-size: 22px;
@@ -14,30 +22,12 @@
   letter-spacing: 0.44px;
 }
 
-.show-more-less {
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-  position: absolute;
-  right: 100px;
-  bottom: 50px;
+.plus-line {
+  opacity: 1;
+  transition: opacity 0.4s;
 
-  &__text {
-    color: #284657;
-    font-size: 18px;
-    font-weight: 600;
-    line-height: 70%;
-    letter-spacing: 0.36px;
-    text-transform: uppercase;
-    margin-right: 10px;
-  }
-
-  &__arrow {
-    transition: transform 0.4s;
-
-    .expanded & {
-      transform: rotate(180deg);
-    }
+  &_hidden {
+    opacity: 0;
   }
 }
 
@@ -112,10 +102,6 @@
   }
 
   &__subtitle {
-    font-size: 40px;
-    font-weight: 600;
-    line-height: 70%;
-    letter-spacing: 0.8px;
     margin-bottom: 22px;
   }
 }
@@ -184,7 +170,6 @@
   padding: 100px 100px 24px;
   color: #284657;
   position: relative;
-  transition: height 0.4s;
 
   &-section {
     background: #dbf9ff;
@@ -203,32 +188,79 @@
       max-height: 1000px;
     }
   }
-
-  &__subtitle {
-    font-size: 40px;
-    font-weight: 600;
-    line-height: 70%;
-    letter-spacing: 0.8px;
-    margin-bottom: 42px;
-  }
 }
 
 .journey {
-  padding: 100px 100px 150px;
-
-  &-section {
-    background: #284657;
-  }
+  padding: 100px 100px 24px;
+  position: relative;
 
   &__title {
     color: #8ce4f8;
   }
 
   &__text {
-    color: #fff;
+    color: #284657;
+
+    .journey__title + & {
+      margin-bottom: 92px;
+    }
   }
 
-  &__chart {
-    width: 100%;
+  &__additional {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.4s ease;
+
+    .expanded & {
+      max-height: 10000px;
+    }
+  }
+
+  &__stage {
+    margin-bottom: 72px;
+
+    &:last-of-type {
+      margin-bottom: 92px;
+    }
+
+    & .journey__subtitle {
+      color: #284657;
+      margin-bottom: 12px;
+    }
+  }
+
+  &__list {
+    color: #284657;
+  }
+
+  &__component {
+    margin-bottom: 59px;
+
+    & .journey__subtitle {
+      margin-left: 50px;
+      color: #284657;
+      display: inline;
+    }
+
+    & .journey__text {
+      color: #0f0f0f;
+      margin-bottom: 33px;
+    }
+  }
+
+  &__line {
+    display: flex;
+    width: 260px;
+    cursor: pointer;
+  }
+
+  &__additional-info {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.4s ease;
+
+    .expanded-item & {
+      max-height: 2000px;
+    }
   }
 }
