--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -3,18 +3,15 @@
   margin: 0 auto;
 }
 
-.btn-light {
+.btn {
   border-radius: 2px;
-  border: 1px solid rgba(223, 223, 223, 0.8);
-  background: rgba(216, 216, 216, 0.35);
-  box-shadow: 3px 6px 15px -1px rgba(0, 0, 0, 0.1);
-  cursor: pointer;
-  padding: 20px 40px;
-  color: #284657;
   font-size: 18px;
   font-weight: 600;
-  line-height: 130%;
+  height: 63px;
   letter-spacing: 0.36px;
+  cursor: pointer;
+  padding: 20px 40px;
+  transition: all 0.3s ease;
 
   &:active,
   &:focus,
@@ -23,46 +20,17 @@
   }
 }
 
-.solid-button {
-  padding: 0 30px;
-  height: 55px;
-  background: var(--third-color);
-  color: var(--second-color);
-  font-family: 'Inter', sans-serif;
-  font-weight: 500;
-  line-height: 55px;
-  border: 0;
-  transition: all 0.3s ease;
-
-  &:hover {
-    box-shadow: 2px 4px 30px 4px rgba(255, 255, 255, 0.2);
-
-    .light & {
-      box-shadow: 2px 4px 30px 4px rgba(47, 115, 148, 0.2);
-    }
-  }
-
-  &:active,
-  &:focus,
-  &:focus-visible {
-    background: linear-gradient(0deg, rgba(208, 208, 208, 0.4) 0%, rgba(208, 208, 208, 0.4) 100%), #fff;
-
-    .light & {
-      background: linear-gradient(0deg, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0.2) 100%), #2f7394;
-    }
-  }
+.btn_transparent {
+  border: 1px solid #284657;
+  background: rgba(255, 255, 255, 0.35);
+  box-shadow: 3px 6px 15px -1px rgba(0, 0, 0, 0.1);
+  color: #284657;
 }
 
-.transparent-button {
-  padding: 0 30px;
-  height: 54px;
-  background-color: transparent;
-  color: var(--third-color);
-  font-family: 'Helvetica', sans-serif;
-  font-weight: 700;
-  line-height: 54px;
-  border: 2px solid var(--third-color);
-  box-shadow: var(--box-shadow-2);
+.btn_light {
+  border: none;
+  background: #fff;
+  color: #284657;
 }
 
 .hidden {
