--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -5,6 +5,7 @@
 
 .btn {
   border-radius: 2px;
+  font-family: 'SF Pro Display', sans-serif;
   font-size: 18px;
   font-weight: 600;
   height: 63px;
@@ -24,12 +25,6 @@
   border: 1px solid #284657;
   background: rgba(255, 255, 255, 0.35);
   box-shadow: 3px 6px 15px -1px rgba(0, 0, 0, 0.1);
-  color: #284657;
-}
-
-.btn_light {
-  border: none;
-  background: #fff;
   color: #284657;
 }
 
