--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -31,6 +31,20 @@
   }
 }
 
+.main {
+  position: relative;
+  
+  &__btn {
+    position: sticky;
+    left: calc(100% - 279px);
+    top: calc(100% - 163px);
+    z-index: 1;
+    backdrop-filter: blur(10px);
+    width: 179px;
+    margin-bottom: 100px;
+  }
+}
+
 .slide {
   display: flex;
   flex-direction: column;
@@ -49,15 +63,6 @@
 
   &__image {
     width: 740px;
-  }
-
-  &__btn {
-    position: fixed;
-    right: 100px;
-    bottom: 100px;
-    z-index: 1;
-    backdrop-filter: blur(10px);
-    width: 179px;
   }
 }
 
