--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -8,11 +8,16 @@
   font-family: 'SF Pro Display', sans-serif;
   font-size: 18px;
   font-weight: 600;
-  height: 63px;
+  line-height: 70%;
+  height: 53px;
   letter-spacing: 0.36px;
   cursor: pointer;
   padding: 20px 40px;
   transition: all 0.3s ease;
+
+  .main & {
+    height: 63px;
+  }
 
   &:active,
   &:focus,
@@ -28,17 +33,24 @@
   color: #284657;
 }
 
+.btn_solid {
+  border: none;
+  background: #284657;
+  color: #fff;
+}
+
 .hidden {
   display: none;
 }
 
 .input {
+  color: #3A3A3A;
   border-radius: 4px;
-  border: 1px solid #c0c0c0;
-  background: transparent;
-  padding: 20px;
-  font-family: 'SF Pro Display', sans-serif;
-  font-size: 20px;
+  border: 1px solid #E8E7E7;
+  height: 62px;
+  padding: 18px 16px;
+  font-family: 'Inter', sans-serif;
+  font-size: 22px;
   font-weight: 300;
   line-height: normal;
   transition: all 0.3s ease;
@@ -46,4 +58,24 @@
   &::placeholder {
     color: #c0c0c0;
   }
+
+  &-wrap {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+  }
+}
+
+input[type='radio'] {
+  display: none;
+}
+
+.label {
+  color: #3A3A3A;
+  font-family: 'Inter', sans-serif;
+  font-size: 18px;
+  font-weight: 300;
+  line-height: 130%;
+  letter-spacing: 0.36px;
+  margin-bottom: 5px;
 }
