--- a/src/components/Booking/Booking.scss
+++ b/src/components/Booking/Booking.scss
@@ -1,14 +1,15 @@
 .booking {
   padding: 40px 100px 80px;
+
   &__title {
     color: #284657;
+    margin-bottom: 46px;
   }
 
   &__text {
     color: #121212;
     line-height: 130%;
     letter-spacing: -0.66px;
-    margin-bottom: 44px;
   }
 
   &__subtitle {
@@ -16,5 +17,79 @@
     font-size: 30px;
     font-weight: 600;
     line-height: 70%;
+    margin: 50px 0;
+
+    &:first-of-type {
+      margin-top: 46px;
+    }
+  }
+
+  &__platforms {
+    display: flex;
+  }
+
+  &__platform {
+    border-radius: 2px;
+    background: rgba(140, 228, 248, 0.15);
+    padding: 0 43px;
+    transition: all 0.3s;
+    cursor: pointer;
+    margin-right: 50px;
+    height: 53px;
+
+    &:last-of-type {
+      margin-right: 0;
+    }
+
+    &-label {
+      color: rgba(40, 70, 87, 0.50);
+      font-size: 18px;
+      font-weight: 300;
+      line-height: 53px;
+      letter-spacing: 0.36px;
+      transition: all 0.3s;
+      cursor: pointer;
+
+      .booking__platform_selected & {
+        color: #284657;
+      }
+    }
+
+    &_selected {
+      background: rgba(140, 228, 248, 0.50);
+    }
+  }
+
+  &__form {
+    width: 670px;
+    padding-bottom: 40px;
+    position: relative;
+
+    &::after {
+      display: block;
+      content: '';
+      background: #284657;
+      width: 100%;
+      height: 1px;
+      border-radius: 5px;
+      position: absolute;
+      bottom: 0;
+    }
+  }
+
+  &__text {
+    color: #284657;
+    font-family: 'Inter', sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 70%;
+    margin-bottom: 20px;
+    min-height: 13px;
+  }
+
+  &__btn {
+    width: 126px;
+    margin-top: 30px;
   }
 }
