--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -37,11 +37,11 @@
   &__btn {
     position: sticky;
     left: calc(100% - 279px);
-    top: calc(100% - 163px);
+    top: calc(100% - 263px);
     z-index: 1;
     backdrop-filter: blur(10px);
     width: 179px;
-    margin-bottom: 100px;
+    margin-bottom: 200px;
   }
 }
 
@@ -51,6 +51,7 @@
   align-items: center;
   position: relative;
   padding: 90px 100px 49px 100px;
+  margin-top: -263px;
 
   &__title {
     color: #274455;
@@ -58,7 +59,15 @@
     font-weight: 500;
     line-height: 70%;
     letter-spacing: -1.2px;
-    margin-bottom: 140px;
+    margin-bottom: 40px;
+  }
+
+  &__text {
+    color: #274455;
+    text-align: center;
+    font-size: 26px;
+    letter-spacing: 0.52px;
+    margin-bottom: 130px;
   }
 
   &__image {
@@ -321,7 +330,7 @@
 }
 
 .talk {
-  padding: 100px;
+  padding: 100px 100px 92px;
 
   &-section {
     background: #8ce4f8;
@@ -333,10 +342,5 @@
 
   &__text {
     color: #121212;
-    margin-bottom: 42px;
-  }
-
-  &__btn {
-    width: 179px;
   }
 }
