--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -8,6 +8,15 @@
   align-items: center;
   padding: 40px 100px;
 
+  &-section {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: #FFF;
+    z-index: 1;
+    width: 100%;
+  }
+
   &__label {
     font-size: 20px;
     cursor: pointer;
